--- a/TeamsGraphBot/TeamsGraphBot/appsettings.json
+++ b/TeamsGraphBot/TeamsGraphBot/appsettings.json
@@ -1,5 +1,5 @@
 {
-	"MicrosoftAppId": "Your App Id",
-	"MicrosoftAppPassword": "Your Client Secret",
-	"ConnectionName": "Your Connection Name"
+	"MicrosoftAppId": "4e38a8d1-a879-4173-a682-72c14b829e52",
+	"MicrosoftAppPassword": "s9T3pnGaUVfxxrl-LmlZ?o-VErxl6y=7",
+	"ConnectionName": "DEVTeamsGraphBotAuth"
 }
